--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "17.0.2",
     "react-floaterjs": "^1.0.6",
-    "react-tilt": "^0.1.4"
+    "react-tilt": "^0.1.4",
+    "use-dencrypt-effect": "^1.0.2"
   }
 }
